# estudo_logs

./: .gitignore  logs_example.py  pyproject.toml
app/: main.py  models.py
app/api/: main.py
app/api/routes/: items.py
app/core/: config.py  log_config.py  logging_config.py  loguru_config.py
examples/: logs_example.py  loki_example.py
loki-stacks/: docker-compose.yml  loki-config.yaml
